# Saut-lab

./: .gitignore  .gitmodules  .gitmodules.save  README.md  openCamera.txt
2nd Presentation/: Video.m  readBag.m
4th Presentation/: Video.m
MicroSimulator/: Main.py  Main_2.ipynb  ekf.py  fastslam.py  landmarks.py  main.py  particle.py  robot.py  utils.py
MicroSimulator/.ipynb_checkpoints/: Main_2-checkpoint.ipynb
MicroSimulator/Algorithm/: Main copia.py  Main.py  env.py  landmarks.py  robot.py  utils.py
MicroSimulator/Files modified/: ekf.py  particle.py  utils.py
MicroSimulator/Parece Funcionar/: Main copia.py  carSensor.py  delete  robot.py  utils.py
MicroSimulator/simAlgorithm/: ekf.py  fastslam.py  particle.py
MicroSimulator/simClasses/: env.py  robot.py  util.py  utils.py
OfflineEstimation/: main_offline.py  particle.py  readBag.m  utils.py
OfflineEstimation/MicroSimulator/: ekf.py  fastslam.py  main.py  particle.py  robot.py  utils.py
Previous code/: fastslam.py  main.py  particle.py  utils.py
RO FastSlam/MicroSimulator without bearing/: carSensor.py  env.py
RO FastSlam/RO MS/: ekf.py  fastslam.py  (+4 more)
calibrationdata/: ost.txt  ost.yaml
labCode/: camera_characterization.py  iteration_time_FastSLAM_150_particles.npy  main_offline.py  main_sim.py  map.py
labSetup/: calibrateCamera.txt  camera_launch.sh  lab_add_config.sh  usefull.txt
labSetup/aruco_launcher/: CMakeLists.txt  package.xml
labSetup/aruco_launcher/launch/: aruco_detect_full.launch  aruco_detect_only.launch  camera_launch.launch
media/: Autonomous System resources.url
(+24 files in other folders)
